--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open --port 4200",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,12 +20,17 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@capacitor/app": "1.1.0",
+    "@capacitor/camera": "^1.2.4",
     "@capacitor/core": "3.4.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
+    "ajv-errors": "^1.0.1",
+    "ajv-formats": "^2.1.1",
     "rxjs": "~6.6.0",
+    "swiper": "^7.4.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
